vlib/v/checker/tests/return_missing_if_else_simple.out
vlib/v/checker/tests/return_missing_if_else_simple.vv:1:1: error: missing return at end of function `if_no_returns`
    1 | fn if_no_returns() int {
      | ~~~~~~~~~~~~~~~~~~~~~~
    2 |     if true {
    3 |         println('no return in then')
vlib/v/checker/tests/return_missing_if_else_simple.vv:10:1: error: missing return at end of function `if_no_return_in_else`
    8 | }
    9 | 
   10 | fn if_no_return_in_else() int {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   11 |     if true {
   12 |         return 123
